Testimonial page added

--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ REACT_APP_API_URL_MASTER=http://13.126.55.56:3005/master/
 REACT_APP_API_URL_SUPER_ADMIN=http://13.126.55.56:3005/super_admin/
 REACT_APP_API_URL_PAYMENT_ADMIN = http://13.126.55.56:3005/admin/show_all_payment
 REACT_APP_API_URL_SHOW_PAYMENT_COACH = http://13.126.55.56:3005/admin/show_payment_coach_by
+REACT_APP_ADD_TESTIMONIALS= http://13.126.55.56:3005/admin/add_testimonial
+
+
